XIVY-3333 refactor: fix java warnings in docFactory and friends